# credit_warehouse

./: .gitignore  README.md  main.py  pyproject.toml
credit_data_platform/: README.md  dbt_project.yml  packages.yml
credit_data_platform/models/marts/: dim_loans.sql
credit_data_platform/models/marts/core/: core.yml  dim_borrowers.sql  dim_countries.sql  dim_date.sql  dim_loans.sql  fact_fx_rates.sql  fact_loan_balances.sql
credit_data_platform/models/staging/: _src_world_bank.yml  _stg_world_bank.yml  stg_ibrd__loan_snapshots.sql
credit_data_platform/models/staging/oer_fx_rates/: _src_fx_rates.yml  _stg_fx_rates.yml  stg_oer__fx_rates.sql
credit_data_platform/models/staging/world_bank/: _src_world_bank.yml  _stg_world_bank.yml  stg_ida__loan_snapshots.sql
credit_data_platform/seeds/: countries.csv  properties.yml  world_bank_economies.csv
lambda/: lambda_function.py
scripts/: country_config.py  generate_countries_data.py  upload_loan_snapshots.py
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
